-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9
-
Component/s: hotspot
-
b37
-
generic
-
generic
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8083419 | emb-9 | Frederic Parain | P3 | Resolved | Fixed | b37 |
The HotSpot VM still supports a number of VM Interfaces that are not used anymore by the JDK.
```
JVM_OnExit
JVM_Exit
JVM_TraceInstructions
JVM_TraceMethodCalls
JVM_IsNaN
JVM_InitializeCompiler
JVM_IsSilentCompiler
JVM_CompileClass
JVM_CompileClasses
JVM_CompilerCommand
JVM_EnableCompiler
JVM_DisableCompiler
JVM_AllocateNewObject
JVM_AllocateNewArray
JVM_LoadClass0
JVM_ResolveClass
JVM_GetFieldAnnotations
JVM_GetMethodAnnotations
JVM_GetMethodDefaultAnnotationValue
JVM_GetMethodParameterAnnotations
JVM_CX8Field
JVM_GetLastErrorString
JVM_Open
JVM_Close
JVM_Read
JVM_Write
JVM_Available
JVM_Lseek
JVM_SetLength
JVM_Sync
JVM_InitializeSocketLibrary
JVM_Socket
JVM_SocketClose
JVM_SocketShutdown
JVM_Recv
JVM_Send
JVM_Timeout
JVM_Listen
JVM_Connect
JVM_Bind
JVM_Accept
JVM_RecvFrom
JVM_GetSockName
JVM_GetSockOpt
JVM_SetSockOpt
JVM_GetHostName
JVM_GetThreadStateValues
JVM_GetThreadStateNames
```
It might be time to remove them from our code base
```
JVM_OnExit
JVM_Exit
JVM_TraceInstructions
JVM_TraceMethodCalls
JVM_IsNaN
JVM_InitializeCompiler
JVM_IsSilentCompiler
JVM_CompileClass
JVM_CompileClasses
JVM_CompilerCommand
JVM_EnableCompiler
JVM_DisableCompiler
JVM_AllocateNewObject
JVM_AllocateNewArray
JVM_LoadClass0
JVM_ResolveClass
JVM_GetFieldAnnotations
JVM_GetMethodAnnotations
JVM_GetMethodDefaultAnnotationValue
JVM_GetMethodParameterAnnotations
JVM_CX8Field
JVM_GetLastErrorString
JVM_Open
JVM_Close
JVM_Read
JVM_Write
JVM_Available
JVM_Lseek
JVM_SetLength
JVM_Sync
JVM_InitializeSocketLibrary
JVM_Socket
JVM_SocketClose
JVM_SocketShutdown
JVM_Recv
JVM_Send
JVM_Timeout
JVM_Listen
JVM_Connect
JVM_Bind
JVM_Accept
JVM_RecvFrom
JVM_GetSockName
JVM_GetSockOpt
JVM_SetSockOpt
JVM_GetHostName
JVM_GetThreadStateValues
JVM_GetThreadStateNames
```
It might be time to remove them from our code base
- backported by
-
JDK-8083419 Cleanup of old and unused VM interfaces
-
- Resolved
-
- duplicates
-
JDK-8035764 Remove use of JVM_Open/JVM_Close functions
-
- Closed
-
- relates to
-
JDK-8189776 Remove dead code in jvm.cpp: force_verify_field_access
-
- Resolved
-
-
JDK-8061618 Removed unused networking functions from os class
-
- Closed
-
-
JDK-8200243 System error message is decoded as invalid encoding in Windows.
-
- Closed
-