8057777: Cleanup of old and unused VM interfaces

Reviewed-by: coleenp, hseigel, alanb, sherman